--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="properties">
             <div class="user-form">
-                <p class="title">Training Order ID: @Html.DisplayFor(model => model.TrainingOrder.Id)</p>
+                <p class="title">Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
                 <hr />
                 <div class="field-container">
 
