--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -85,10 +85,7 @@
                         </div>
                     </form>
                 </div>
-
-                <a asp-page="Index">
-                    <button class="btn btnBlue">Return To Menu</button>
-                </a>
+                <a asp-page="Index" class="btn btnBlue">Return To Menu</a>
             </div>
         </div>
     </div>
