--- a/WCSTrainer/Pages/TrainingOrders/Delete.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Delete.cshtml
@@ -20,14 +20,11 @@
             <div class="user-form">
                 <p class="title">Delete Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
                 <p class="description">Are you sure you would like to delete this training order?</p>
-                <hr />
-
+                <hr/>
                 <form method="post">
                     <button class="btn btnRed">Delete</button>
                 </form>
-                <a asp-page="./Index">
-                    <button class="btn btnBlue">Return To Menu</button>
-                </a>
+                <a asp-page="./Index" class="btn btnBlue">Return To Menu</a>
             </div>
         </div>
     </div>
