--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -161,11 +161,10 @@ body {
 
                 .panel .body .properties .user-form .btn {
                     margin-top: 10px;
-                    padding: 10px;
+                    padding: 10px 0;
                     width: 250px;
+                    font-size: 15px;
                 }
-
-
 
                 .panel .body .properties .user-form .field-container .form-group {
                     display: flex;
@@ -349,6 +348,7 @@ body {
             .panel .body .properties .order-list2 {
                 overflow-y: scroll;
                 width: 100%;
+                max-height: 750px;
             }
 
                 .panel .body .properties .order-list2 .sorters {
