--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -77,6 +77,10 @@ body {
     font-size: 40px;
 }
 
+/*--------------------------------------------------------*/
+/*                       MAIN PANEL                       */
+/*--------------------------------------------------------*/
+
 .panel {
     display: flex;
     width: 100%;
@@ -230,18 +234,6 @@ body {
                     font-size: 20px;
                 }
 
-                .panel .body .properties .user-form .text-group .yellow {
-                    color: #ffed20;
-                }
-
-                .panel .body .properties .user-form .text-group .green {
-                    color: #1fff38;
-                }
-
-                .panel .body .properties .user-form .text-group .white {
-                    color: #ffffff;
-                }
-
             .panel .body .properties .tools {
                 margin-left: 30px;
                 display: flex;
@@ -325,6 +317,7 @@ body {
                     }
 
                         .panel .body .properties .order-list li .info .title {
+                            display: flex;
                             width: 100%;
                             height: 100%;
                             color: white;
@@ -332,10 +325,15 @@ body {
                         }
 
                         .panel .body .properties .order-list li .info .sub {
+                            display: flex;
                             margin-top: 2px;
                             font-size: 15px;
                             color: #B2B3B4;
                         }
+
+                            .panel .body .properties .order-list li .info .sub p {
+                                margin-right: 5px;
+                            }
 
                     .panel .body .properties .order-list li .btn {
                         padding: 8px 10px;
@@ -393,6 +391,10 @@ body {
                         text-align: start;
                     }
 
+/*--------------------------------------------------------*/
+/*                   UNIVERSAL BUTTONS                    */
+/*--------------------------------------------------------*/
+
 .btn {
     background-color: black;
     text-align: center;
@@ -402,22 +404,26 @@ body {
     user-select: none;
 }
 
-.btnWhite            { color: white;               }
-    .btnWhite:hover  { background-color: #282828;  }
-    .btnWhite:active { border-color: #585858;      }
+.btnWhite        { color: white;              }
+.btnWhite:hover  { background-color: #282828; }
+.btnWhite:active { border-color: #585858;     }
 
-.btnBlue             { color: #31d9ff;             }
-    .btnBlue:hover   { background-color: #0b2930;  }
-    .btnBlue:active  { border-color: #185362;      }
+.btnBlue         { color: #31d9ff;            }
+.btnBlue:hover   { background-color: #0b2930; }
+.btnBlue:active  { border-color: #185362;     }
 
-.btnRed              { color: #ff4d4d;             }
-    .btnRed:hover    { background-color: #2c0d0d;  }
-    .btnRed:active   { border-color: #5c1d1d;      }
+.btnRed          { color: #ff4d4d;            }
+.btnRed:hover    { background-color: #2c0d0d; }
+.btnRed:active   { border-color: #5c1d1d;     }
 
-.btnGreen            { color: #64ff76;             }
-    .btnGreen:hover  { background-color: #102813;  }
-    .btnGreen:active { border-color: #235b2a;      }
+.btnGreen        { color: #64ff76;            }
+.btnGreen:hover  { background-color: #102813; }
+.btnGreen:active { border-color: #235b2a;     }
 
+
+/*--------------------------------------------------------*/
+/*                     DELETION POPUP                     */
+/*--------------------------------------------------------*/
 
 .modal {
     display: flex;
@@ -443,7 +449,18 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 10px;
     }
+
+        .modal .two .title {
+            font-size: 22px;
+            font-weight: bold;
+        }
+
+        .modal .two .info {
+            text-align: center;
+            font-size: 18px;
+        }
 
     .modal .three {
         display: flex;
@@ -481,4 +498,13 @@ body {
 
 .btn-submit {
     padding: 10px 50px;
+    font-size: 15px;
 }
+
+/*--------------------------------------------------------*/
+/*                     DELETION POPUP                     */
+/*--------------------------------------------------------*/
+
+.active    { color: #1fff38; }
+.awaiting  { color: #ffed20; }
+.completed { color: #ffffff; }
